[package]
name = "redisgraphio"
version = "0.1.0"
edition = "2021"

[dependencies]
redis = { version = "^0.21.0", optional = true }
indexmap = "1.8.2"

[dev-dependencies]
paste = "1.0"
tokio = { version = "1", features = ["rt"] }
async-std = "1.6.0"

[features]
default = ['redis']
tokio-comp = ['redis/tokio-comp']
async-std-comp = ['redis/async-std-comp']

[[test]]
name = "Tests"
path = "./src/tests.rs"
required-features = ["redis/tokio-comp, redis/async-std-comp"]
