[package]
name = "redisgraphio"
version = "0.2.0"
description = "Client library for working with redis graph"
license = "MIT"
keywords = ["redis", "database", "redisgraph"]
categories = ["database-implementations", "database"]
homepage = "https://github.com/redis-rs/redis-rs"
repository = "https://github.com/Threated/redisgraphio"
documentation = "https://docs.rs/redisgraphio"
readme = "README.md"
edition = "2021"

[dependencies]
redis = { version = "0.21", optional = true }
indexmap = "1.0"

[dev-dependencies]
paste = "1.0"
tokio = { version = "1", features = ["rt"] }
async-std = "1.6.0"

[features]
default = ['redis']
tokio-comp = ['redis/tokio-comp']
async-std-comp = ['redis/async-std-comp']

[[test]]
name = "Tests"
path = "./src/tests.rs"
required-features = ["redis/tokio-comp, redis/async-std-comp"]
